<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ©2017 Rajneesh Singh
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MusicX</string>
    <string name="titles">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="action_settings">Settings</string>
    <string name="album_artwork">Album Artwork</string>
    <string name="create_playlist">Create playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="action_add_to_queue">Add to queue</string>
    <string name="action_set_as_next_track">Next track</string>
    <string name="about">About</string>
    <plurals name="albums_count">
        <item quantity="one">%d Albums</item>
        <item quantity="other">%d Albums</item>
    </plurals>
    <string name="search">Search</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="choose_playlist">Select playlist</string>
    <string name="favorites">Favorites</string>
    <string name="library">Library</string>
    <string name="action_set_ringtone">Set Ringtone</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_details">Details</string>
    <string name="delete_music">Delete Song from device ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share with</string>
    <string name="primary_color">Primary Color</string>
    <string name="accent_color">Accent Color</string>
    <integer name="tilting_angle">-5</integer>
    <string name="song_Name"><b>Song Name:</b></string>
    <string name="album_name"><b>Album Name:</b></string>
    <string name="artist_name"><b>Artist Name:</b></string>
    <string name="file_size"><b>File Size:</b></string>
    <string name="file_path"><b>File Path:</b></string>
    <string name="trackno"><b>Song No:</b></string>
    <string name="okay">OK</string>
    <string name="permissions_title">Permissions</string>
    <string name="toast_permissions_not_granted">Permissions not granted.</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date">Date</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="deleteplaylist">Are you sure you want to delete this playlist?</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="Intro">Intro</string>
    <string name="start">Start</string>
    <string name="Continue">Continue</string>
    <string name="cancel_timer">Cancel Timer</string>
    <string name="stop_timer">Timer Stopped</string>
    <string name="timer_info" formatted="false" tools:ignore="StringFormatInvalid">%02d:%02d</string>
    <string name="action_sleeptimer">SleepTimer</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="stop">Stop in</string>
    <string name="impossible">0 impossible</string>
    <string name="action_edit_tags">Edit Tags</string>
    <string name="draw_over_permissions_message">To display Audio Widget app needs the permission to draw over another apps.</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="app_info">Light,Elegant,Beautiful Material Music Player</string>
    <string name="recentlists">Recent</string>
    <string name="Shares">Share app</string>
    <string name="Playing_View">Playing Screen</string>
    <string name="playing_view_selection">Select Playing View</string>
    <string name="base_theme">Dark Theme</string>
    <string name="system_ui_colors">System UI Colors</string>
    <string name="colored_status_bar_summary">Toggle status bar color</string>
    <string name="colored_status_bar">Status Bar Color</string>
    <string name="colored_nav_bar">Navigation Bar Color</string>
    <string name="colored_nav_bar_summary">Toggle navigation color</string>
    <string name="playing_view">Playing View</string>
    <string name="personalisation">Personalisation</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Apply a dark theme throughout the app</string>
    <string name="black_theme">Black Theme</string>
    <string name="black_theme_summary">Apply a black theme throughout the app</string>
    <string name="primary_color_summary">Change the primary theme color</string>
    <string name="accent_color_summary">Change the accent theme color</string>
    <string name="custom">custom</string>
    <string name="equalizer">Equalizer</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="unknown">unknown</string>
    <string name="services">Services</string>
    <string name="save_lyrics_summary">Allow to save/access offline lyrics</string>
    <string name="save_lyrics">Save Lyrics</string>
    <string name="not_available_below_m">Not available below 6.0 Marshmallow.</string>
    <string name="not_available_below_lollipop">Not available below 5.0 Lollipop.</string>
    <string name="light_ui_modes">Light UI Modes</string>
    <string name="light_status_bar_mode">Light Status Bar Mode</string>
    <string name="light_toolbar_mode">Light Toolbar Mode</string>
    <string name="save_headset_summary">Pause on headset plugged</string>
    <string name="save_headset">Headset</string>
    <string name="save_telephony_summary">Pause on PhoneCalls</string>
    <string name="save_telephony">PhoneCalls</string>
    <string name="metadata">MetaData</string>
    <string name="clear_favdb_summary">Clear Favorites Database</string>
    <string name="clear_favdb">Clear Fav Database</string>
    <string name="add_toFav">Add to fav</string>
    <string name="clear_recentplayeddb">Clear RecentPlayed Db</string>
    <string name="network">Network</string>
    <string name="save_internet_summary">disable to auto download artist artwork,lyrics</string>
    <string name="save_internet">Save Internet Data</string>
    <string name="loudness">LOUDNESS</string>
    <string name="Virtual">VIRTUAL</string>
    <string name="Bass">BASS</string>
    <string name="testerName">Aashish Shinde</string>
    <string name="appcr">© 2017 MusicX.</string>
    <string name="crash_toast_text">crash reported</string>
    <string name="hide_notification">hide notification</string>
    <string name="hide_notify">Notification</string>
    <string name="hide_lockscreenMedia">hide lockscreen mediaplayer</string>
    <string name="hide_lockscreen">Lockscreen</string>
    <string name="Rate">Rate us</string>
    <string name="restore_lastTab">Restore last Tab</string>
    <string name="Tab">TabView</string>
    <string name="folder">Folder</string>
    <string name="reverb">REVERB</string>
    <string name="hqartist_artwork">HQ Artwork</string>
    <string name="hqartist_artwork_summary">enable to download high quality artwork</string>
    <string name="storage">Storage</string>
    <string name="writesetting">To write ringtone in settings</string>
</resources>