<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_library"
            android:checked="true"
            android:icon="@drawable/ic_nav_music_library"
            android:title="@string/library"/>

        <item
            android:id="@+id/action_favorites"
            android:icon="@drawable/ic_nav_favorites"
            android:title="@string/favorites"/>

        <item
            android:id="@+id/action_sleep_timer"
            android:icon="@drawable/ic_sleep_timer"
            android:title="@string/action_sleeptimer"/>

        <item
            android:id="@+id/action_eq"
            android:icon="@drawable/eq"
            android:title="@string/equalizer"/>

    </group>
    <group
        android:id="@+id/group_settings">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about"/>

        <item
            android:id="@+id/rateus"
            android:icon="@drawable/rateus"
            android:title="@string/Rate"/>

        <item
            android:id="@+id/shares"
            android:icon="@drawable/sharedark"
            android:title="@string/Shares"/>

    </group>
</menu>