<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory android:title="@string/Playing_View"
        app:ateKey_prefCategory_textColor="?ate_key">


        <com.afollestad.appthemeengine.prefs.ATEListPreference
            android:key="playing_selection"
            android:defaultValue="0"
            android:entries="@array/playingChoice"
            android:entryValues="@array/selectedPlayingView"
            android:summary="@string/playing_view_selection"
            android:title="@string/playing_view"
            app:ateKey_pref_list="?ateKey_pref_list"/>


    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory
        android:title="@string/base_theme"
        app:ateKey_prefCategory_textColor="?ate_key">

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="dark_theme"
            android:persistent="true"
            android:summary="@string/dark_theme_summary"
            android:title="@string/dark_theme"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />

    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory
        android:title="@string/personalisation"
        app:ateKey_prefCategory_textColor="?ate_key">

        <com.afollestad.appthemeengine.prefs.ATEColorPreference
            android:key="primary_color"
            android:persistent="false"
            android:summary="@string/primary_color_summary"
            android:title="@string/primary_color"
            app:ateKey_pref_color="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATEColorPreference
            android:key="accent_color"
            android:persistent="false"
            android:summary="@string/accent_color_summary"
            android:title="@string/accent_color"
            app:ateKey_pref_color="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="floating_view"
            android:persistent="true"
            android:summary="Show/Hide FloatingWidget"
            android:title="Floating Widget"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="gridlist_songview"
            android:persistent="true"
            android:summary="Grid/List SongView"
            android:title="Song View"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="gridlist_albumview"
            android:persistent="true"
            android:summary="Grid/List AlbumView"
            android:title="Album View"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="gridlist_artistview"
            android:persistent="true"
            android:summary="Grid/List ArtistView"
            android:title="Artist View"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATEListPreference
            android:key="change_fonts"
            android:defaultValue="11"
            android:entries="@array/fontChoice"
            android:entryValues="@array/selectedFont"
            android:summary="change fonts of Text"
            android:title="Fonts"
            app:ateKey_pref_list="?ateKey_pref_list"/>

        <com.afollestad.appthemeengine.prefs.ATEListPreference
            android:key="blur_view"
            android:defaultValue="0"
            android:entries="@array/blurChoice"
            android:entryValues="@array/selectedblur"
            android:summary="change blur intensity"
            android:title="Playing BlurView"
            app:ateKey_pref_list="?ateKey_pref_list"/>

    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory
        android:title="@string/system_ui_colors"
        app:ateKey_prefCategory_textColor="?ate_key">

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="true"
            android:key="colored_status_bar"
            android:persistent="false"
            android:summary="@string/colored_status_bar_summary"
            android:title="@string/colored_status_bar"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="true"
            android:key="colored_nav_bar"
            android:persistent="false"
            android:summary="@string/colored_nav_bar_summary"
            android:title="@string/colored_nav_bar"
            app:ateKey_pref_checkBox="?ate_key" />

    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory
        android:title="@string/light_ui_modes"
        app:ateKey_prefCategory_textColor="?ate_key">

        <com.afollestad.appthemeengine.prefs.ATEListPreference
            android:defaultValue="2"
            android:entries="@array/light_status_mode_entries"
            android:entryValues="@array/light_status_mode_values"
            android:key="light_status_bar_mode"
            android:persistent="true"
            android:title="@string/light_status_bar_mode"
            app:ateKey_pref_list="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATEListPreference
            android:defaultValue="2"
            android:entries="@array/light_toolbar_mode_entries"
            android:entryValues="@array/light_status_mode_values"
            android:key="light_toolbar_mode"
            android:persistent="true"
            android:title="@string/light_toolbar_mode"
            app:ateKey_pref_list="?ate_key" />

    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory android:title="@string/network"
        app:ateKey_prefCategory_textColor="?ate_key">

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="save_lyrics"
            android:persistent="true"
            android:summary="@string/save_lyrics_summary"
            android:title="@string/save_lyrics"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="save_internet"
            android:persistent="true"
            android:summary="@string/save_internet_summary"
            android:title="@string/save_internet"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />

    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>

    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory android:title="@string/services"
        app:ateKey_prefCategory_textColor="?ate_key">

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="save_headset"
            android:persistent="true"
            android:summary="@string/save_headset_summary"
            android:title="@string/save_headset"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />

        <com.afollestad.appthemeengine.prefs.ATECheckBoxPreference
            android:defaultValue="false"
            android:key="save_telephony"
            android:persistent="true"
            android:summary="@string/save_telephony_summary"
            android:title="@string/save_telephony"
            android:widgetLayout="@layout/ate_preference_checkbox"
            app:ateKey_pref_checkBox="?ate_key" />


    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>
    <com.afollestad.appthemeengine.prefs.ATEPreferenceCategory android:title="@string/metadata"
        app:ateKey_prefCategory_textColor="?ate_key">

        <com.rks.musicx.misc.widgets.DailogPref
            android:key="clear_favdb"
            android:dialogMessage="@string/clear_favdb_summary"
            android:positiveButtonText="Ok"
            android:negativeButtonText="Cancel"
            android:persistent="true"
            android:title="@string/clear_favdb" />

        <com.rks.musicx.misc.widgets.DailogPref
            android:key="clear_recentdb"
            android:dialogMessage="@string/clear_recentplayeddb"
            android:positiveButtonText="Ok"
            android:negativeButtonText="Cancel"
            android:persistent="true"
            android:title="@string/clear_recentplayeddb" />

    </com.afollestad.appthemeengine.prefs.ATEPreferenceCategory>
</PreferenceScreen>