<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/artist_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:iconifiedByDefault="true"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_sort_by"
        android:title="@string/menu_sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/sort_order_entry_az"/>
            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/sort_order_entry_za"/>
            <item
                android:id="@+id/menu_sort_by_number_of_songs"
                android:title="@string/sort_order_entry_number_of_songs"/>
            <item
                android:id="@+id/menu_sort_by_number_of_albums"
                android:title="@string/sort_order_entry_number_of_albums"/>
        </menu>
    </item>

    <item
        android:id="@+id/grid_view"
        android:title="Grid view"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/bytwo"
                android:title="2x2"/>
            <item
                android:id="@+id/bythree"
                android:title="3x3"/>
            <item
                android:id="@+id/byfour"
                android:title="4x4"/>
        </menu>
    </item>
</menu>